components/test/base/.tekton/event-listener.yaml
apiVersion: triggers.tekton.dev/v1beta1
kind: EventListener
metadata:
  annotations:
    appstudio.openshift.io/application: test-app
    appstudio.openshift.io/component: test
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: test
  namespace: jvm-test
spec:
  namespaceSelector: {}
  resources: {}
  serviceAccountName: pipeline
  triggers:
  - bindings:
    - kind: ClusterTriggerBinding
      ref: github-push
    template:
      ref: test
status:
  configuration:
    generatedName: ""
